# rust-ragllm-tui

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: schema.rs
