[package]
name = "rust-ragllm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
ratatui = "0.27.0"
tokio = { version = "1.38.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
reqwest = "0.12.5"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
